Stage 3 corrections with Dan Mostly for performance